--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -5,12 +5,20 @@ $black: #000;
 $gray: #f5f5f5;
 $grayDarker: #eeeeee;
 
+
+
 // Colors
 $peach: #FFAAAA;
-$grapefruit: #e68181;
+$logoblue: #488dc4;
 $pear: #ffed84;
 $greenapple: #aedfa3;
 
-$logoblue: #488dc4;
-$logoblueDark: #2772B6;
+// Nav Colors
 $lightblue: #7aafdb;
+$lightblueDark: #2772B6;
+
+$grapefruit: #e68181;
+$grapefruitDark: #db6464;
+
+$pear: #e7d379;
+$pearDark: #ebd266;
