--- a/scss/gridbox-nav-menu-mainmenu.scss
+++ b/scss/gridbox-nav-menu-mainmenu.scss
@@ -128,6 +128,9 @@ a.sub-toggle.clicked {
         &:nth-of-type(3) {
             transition-delay: 0.3s;
         }
+        &:nth-of-type(4) {
+            transition-delay: 0.4s;
+        }
 
         // &:nth-of-type(n) {
         //     transition-delay: (0.1 + (n - 1) * 0.1)s;
