--- a/scss/gridbox-nav-menu-theme.scss
+++ b/scss/gridbox-nav-menu-theme.scss
@@ -1,74 +1,3 @@
-
-// Default template for Themes
-.nav.themename {
-
-    // toggler span background and ::before, ::after element background
-    .menu-toggle {
-        span {
-            // background: ;
-            &::before {
-                // background: ;
-            }
-            &::after {
-                // background: ;
-            }
-        }
-
-        &:hover {
-            span {
-                // background: ;
-                &::before {
-                    // background: ;
-                }
-                &::after {
-                    // background: ;
-                }
-            }
-        }
-    }
-
-    // brandname span
-    .brand {
-        span {
-            // color: ;
-        }
-    }
-
-    // overlay background
-    .overlay {
-        // background: ;
-    }
-
-    .main {
-        // main menu item background
-        > li {
-            // background: ;
-        }
-
-        // main menu item font style
-        > li > a {
-            // color: ;
-
-            // dropdown carret
-            &.sub-toggle {
-                &::after {
-                    // border-top: 2px solid $logoblue;
-                    // border-right: 2px solid $logoblue;
-                } 
-            }
-        }
-    }
-
-    // sub menu item font style
-    .sub {
-        a {
-            // color: ;
-        }
-    }
-
-}
-
-
 // /* ===================================================================
 //  *                          Default theme
 //  * ===================================================================
@@ -89,12 +18,12 @@
 
         &:hover {
             span {
-                background: $logoblueDark;
+                background: $lightblueDark;
                 &::before {
-                    background: $logoblueDark;
+                    background: $lightblueDark;
                 }
                 &::after {
-                    background: $logoblueDark;
+                    background: $lightblueDark;
                 }
             }
         }
@@ -128,7 +57,6 @@
         // main menu item background
         // > li {
         //     background: $logoblue;
-        //     box-shadow: 0px 2px 8px -5px rgba(0, 0, 0, 0.5);
         // }
 
         // main menu item font style
@@ -138,8 +66,8 @@
             // dropdown carret
             &.sub-toggle {
                 &::after {
-                    border-top: 2px solid $logoblue;
-                    border-right: 2px solid $logoblue;
+                    border-top: 2px solid $lightblue;
+                    border-right: 2px solid $lightblue;
                 } 
             }
         }
@@ -174,7 +102,235 @@
             color: $white;
 
             &:hover {
-                color: $logoblue;
+                color: $lightblue;
+                // hover bg color
+                &::before {
+                    background: $white;
+                }
+            }
+        }
+    }
+}
+
+// /* ===================================================================
+//  *                        Grapefruit theme
+//  * ===================================================================
+//  */
+
+.nav.grapefruit {
+    // toggler span background and ::before, ::after element background
+    .menu-toggle {
+        span {
+            background: $black;
+            &::before {
+                background: $black;
+            }
+            &::after {
+                background: $black;
+            }
+        }
+
+        &:hover {
+            span {
+                background: $grapefruitDark;
+                &::before {
+                    background: $grapefruitDark;
+                }
+                &::after {
+                    background: $grapefruitDark;
+                }
+            }
+        }
+
+        &.active {
+            span {
+                background: transparent;
+                &::before {
+                    background: $white;
+                }
+                &::after {
+                    background: $white;
+                }
+            }
+        }
+    }
+
+    // brandname span
+    .brand {
+        span {
+            color: $white;
+        }
+    }
+
+    // overlay background
+    .overlay {
+        background: $grapefruit;
+    }
+
+    .main {
+        // main menu item background
+        // > li {
+        //     background: $logoblue;
+        // }
+
+        // main menu item font style
+        > li > a {
+            color: $white;
+
+            // dropdown carret
+            &.sub-toggle {
+                &::after {
+                    border-top: 2px solid $grapefruit;
+                    border-right: 2px solid $grapefruit;
+                } 
+            }
+        }
+    }
+
+    // sub menu item font style
+    .sub {
+        a {
+            color: $white;
+            // border-bottom: 2px solid rgba(0, 0, 0, 0);
+
+            &:hover {
+                // color: $pear;
+                font-weight: 700;
+            }
+        }
+    }
+
+    // social
+    .social {
+
+        // divider color
+        &::before {
+            background: $white;
+        }
+
+        > span {
+            color: $white;
+        }
+
+        .icon {
+            color: $white;
+
+            &:hover {
+                color: $grapefruit;
+                // hover bg color
+                &::before {
+                    background: $white;
+                }
+            }
+        }
+    }
+}
+
+// /* ===================================================================
+//  *                        Pear theme
+//  * ===================================================================
+//  */
+
+.nav.pear {
+    // toggler span background and ::before, ::after element background
+    .menu-toggle {
+        span {
+            background: $black;
+            &::before {
+                background: $black;
+            }
+            &::after {
+                background: $black;
+            }
+        }
+
+        &:hover {
+            span {
+                background: $pearDark;
+                &::before {
+                    background: $pearDark;
+                }
+                &::after {
+                    background: $pearDark;
+                }
+            }
+        }
+
+        &.active {
+            span {
+                background: transparent;
+                &::before {
+                    background: $white;
+                }
+                &::after {
+                    background: $white;
+                }
+            }
+        }
+    }
+
+    // brandname span
+    .brand {
+        span {
+            color: $white;
+        }
+    }
+
+    // overlay background
+    .overlay {
+        background: $pear;
+    }
+
+    .main {
+        // main menu item background
+        // > li {
+        //     background: $logoblue;
+        // }
+
+        // main menu item font style
+        > li > a {
+            color: $white;
+
+            // dropdown carret
+            &.sub-toggle {
+                &::after {
+                    border-top: 2px solid $pear;
+                    border-right: 2px solid $pear;
+                } 
+            }
+        }
+    }
+
+    // sub menu item font style
+    .sub {
+        a {
+            color: $white;
+            // border-bottom: 2px solid rgba(0, 0, 0, 0);
+
+            &:hover {
+                // color: $pear;
+                font-weight: 700;
+            }
+        }
+    }
+
+    // social
+    .social {
+
+        // divider color
+        &::before {
+            background: $white;
+        }
+
+        > span {
+            color: $white;
+        }
+
+        .icon {
+            color: $white;
+
+            &:hover {
+                color: $pear;
                 // hover bg color
                 &::before {
                     background: $white;
