--- a/scss/gridbox-position.scss
+++ b/scss/gridbox-position.scss
@@ -24,3 +24,20 @@
     right: 20px;
     bottom: 20px;
 }
+
+// margins
+.margin-top {
+    margin-top: 15px;
+}
+
+.margin-left {
+    margin-left: 15px;
+}
+
+.margin-right {
+    margin-right: 15px;
+}
+
+.margin-bottom {
+    margin-bottom: 15px;
+}
