--- a/css/gridbox-form.css
+++ b/css/gridbox-form.css
@@ -1,3 +1,34 @@
+.fixed {
+  position: fixed !important; }
+
+.top-left {
+  left: 20px;
+  top: 20px; }
+
+.bottom-left {
+  left: 20px;
+  bottom: 20px; }
+
+.top-right {
+  right: 20px;
+  top: 20px; }
+
+.bottom-right {
+  right: 20px;
+  bottom: 20px; }
+
+.margin-top {
+  margin-top: 15px; }
+
+.margin-left {
+  margin-left: 15px; }
+
+.margin-right {
+  margin-right: 15px; }
+
+.margin-bottom {
+  margin-bottom: 15px; }
+
 /* Avoid accident click event caused by finger touch */
 a,
 area,
@@ -6,14 +37,12 @@ button,
 input,
 label,
 select,
-summary,
 textarea {
   -ms-touch-action: manipulation;
   touch-action: manipulation; }
 
 form {
   width: 100%;
-  padding: 15px;
   color: #212529;
   border-bottom: none; }
   form:last-child {
