--- a/css/gridbox-grids.css
+++ b/css/gridbox-grids.css
@@ -2,10 +2,7 @@
   width: 93.75%;
   height: auto;
   margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 15px; }
-  .container:last-child, .container-fluid:last-child {
-    margin-bottom: 0; }
+  margin-right: auto; }
 
 .container-fluid {
   width: 100%; }
