update filesys structure

--- a/scss/gridbox.scss
+++ b/scss/gridbox.scss
@@ -1,4 +1,6 @@
 @import '_variables.scss';
+@import '_colors.scss';
+@import "_mixins.scss";
 
 // Global Settings
 * {
@@ -24,6 +26,18 @@ html {
         background-color: $docBodyBGColor;
     }
 }
+
+
+
+// load core
+@import './module_core/gridbox-position';
+
+// load modules
+@import './module_grids/gridbox-grids';
+@import './module_nav/gridbox-nav';
+@import './module_form/gridbox-form';
+
+
 
 
 
