--- a/scss/gridbox.scss
+++ b/scss/gridbox.scss
@@ -36,6 +36,7 @@ html {
 @import './module_grids/gridbox-grids';
 @import './module_nav/gridbox-nav';
 @import './module_form/gridbox-form';
+@import './module_login/gridbox-login';
 
 
 
