--- a/css/gridbox.css
+++ b/css/gridbox.css
@@ -2272,3 +2272,52 @@ a {
   .iconized .check-icon .checked {
     opacity: 0;
     color: #1e88e5; }
+
+.login-form-container {
+  position: absolute;
+  width: 100%;
+  top: 0;
+  bottom: 0;
+  overflow-y: scroll; }
+  @media (max-width: 767px) {
+    .login-form-container {
+      position: relative;
+      background: none !important; } }
+
+.login-form {
+  position: absolute;
+  width: 450px;
+  height: auto;
+  padding: 35px 55px;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  -webkit-box-shadow: 0px 4px 16px -12px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 4px 16px -12px rgba(0, 0, 0, 0.5); }
+  @media (max-width: 767px) and (orientation: portrait) {
+    .login-form {
+      position: relative;
+      width: 100%;
+      padding: 25px 35px;
+      top: 0;
+      left: 0;
+      -webkit-transform: none;
+      -ms-transform: none;
+      transform: none;
+      -webkit-box-shadow: none;
+      box-shadow: none; } }
+  @media (max-width: 767px) and (orientation: landscape) {
+    .login-form {
+      position: relative;
+      width: 450px;
+      padding: 25px 35px;
+      margin: 0 auto;
+      top: 0;
+      left: 0;
+      -webkit-transform: none;
+      -ms-transform: none;
+      transform: none;
+      -webkit-box-shadow: none;
+      box-shadow: none; } }
