--- a/scss/module_core/gridbox-dimension.scss
+++ b/scss/module_core/gridbox-dimension.scss
@@ -27,6 +27,10 @@
     }
 }
 
+.full-width {
+    width: 100%;
+}
+
 // /* =======================================================================
 //  *                           Fixed-width Rectangle
 //  * -----------------------------------------------------------------------
