--- a/scss/module_login/gridbox-login.scss
+++ b/scss/module_login/gridbox-login.scss
@@ -1,26 +1,29 @@
 
 .login-form-container {
     position: absolute;
-    width: 100%;
-    top: 0;
-    bottom: 0;
-    overflow-y: scroll;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 
     @media (max-width: 767px) {
         position: relative;
-        background: none !important;
+        width: 100%;
+        top: 0;
+        left: 0;
+        transform: none;
     }
 }
 
 .login-form {
-    position: absolute;
+    position: relative;
     width: 450px;
-    height: auto;
+    height: 685px;
     padding: 35px 55px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     box-shadow: 0px 4px 16px -12px $boxShadow;
+
+    &.hide {
+        display: none;
+    }
 
     @media (max-width: 767px) and (orientation: portrait) {
         position: relative;
@@ -41,6 +44,70 @@
         left: 0;
         transform: none;
         box-shadow: none;
+    }
+}
+
+.login-toggle {
+    position: absolute;
+    display: inline-block;
+    width: 45px;
+    height: 45px;
+    top: calc(100% - 45px/2);
+    left: 50%;
+    transform: translateX(-50%) rotate(180deg);
+    border-radius: 50%;
+    background: $information;
+    box-shadow: 0 1px 13px -7px $black;
+    transition: all 0.1s ease-in;
+    cursor: pointer;
+
+    &.active {
+        transform: translateX(-50%) rotate(0deg);
+    }
+
+    &:hover {
+        background: $informationDarker;
+    }
+
+    i {
+        display: inline-block;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: $white;
+    }
+
+    @media (max-width: 767px) {
+        display: none;
+        box-shadow: none;
+    }
+}
+
+.social-group {
+    position: absolute;
+    transform: translateY(0%);
+    transition: all 0.3s ease-out;
+    z-index: 2;
+
+    &.slide-up {
+        transform: translateY(-100%);
+        transition: all 0.3s ease-out;
+    }
+
+    a {
+        border: none;
+
+        &.google { background: $googleplusRed; }
+        &.facebook { background: $facebookBlue; }
+        &.twitter { background: $twitterBlue; }
+    }
+
+    @media (max-width: 767px) {
+        display: block !important;
+        position: relative;
+        transform: none;
+        border-top: 1px solid $gray;
     }
 }
 
