--- a/css/gridbox.css
+++ b/css/gridbox.css
@@ -1986,6 +1986,7 @@ form {
   padding: 0.5rem 0.75rem;
   color: #212529;
   font-size: 1rem;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
   line-height: 1.5rem;
   border: 1px solid rgba(0, 0, 0, 0.15);
   -webkit-transition: all 0.3s;
