--- a/scss/module_form/gridbox-form-input.scss
+++ b/scss/module_form/gridbox-form-input.scss
@@ -23,6 +23,7 @@
     padding: 0.5rem 0.75rem;
     color: $fontColor;
     font-size: $inputFontSize;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
     line-height: $inputLineHeight;
     border: 1px solid $border;  
     transition: all 0.3s;
