Update Login Form

--- a/scss/module_core/gridbox-background.scss
+++ b/scss/module_core/gridbox-background.scss
@@ -15,3 +15,23 @@
 .bg-offblack {
     background: $offBlack;
 }
+
+.bg-peach {
+    background: $peach;
+}
+
+.bg-logoblue {
+    background: $logoblue;
+}
+
+.bg-pear {
+    background: $pear;
+}
+
+.bg-greenapple {
+    background: $greenapple;
+}
+
+.bg-grapefruit {
+    background: $grapefruit;
+}
