--- a/scss/module_nav/gridbox-nav-menu-brand.scss
+++ b/scss/module_nav/gridbox-nav-menu-brand.scss
@@ -25,6 +25,7 @@
                 size: 1.5rem;
                 weight: 700;
             }
+            transition: color 0.3s;
         }
     }
 
