--- a/css/gridbox.css
+++ b/css/gridbox.css
@@ -13,8 +13,6 @@ html {
   font-weight: normal;
   color: #212529;
   line-height: 1.5; }
-  html body {
-    background-color: #fff; }
 
 .fixed {
   position: fixed !important; }
@@ -336,6 +334,21 @@ html {
 
 .bg-offblack {
   background: #535353; }
+
+.bg-peach {
+  background: #FFAAAA; }
+
+.bg-logoblue {
+  background: #488dc4; }
+
+.bg-pear {
+  background: #e7d379; }
+
+.bg-greenapple {
+  background: #aedfa3; }
+
+.bg-grapefruit {
+  background: #e68181; }
 
 .img-sm {
   width: 65px;
@@ -1404,7 +1417,10 @@ html {
   .nav .menu-toggle.active span::after {
     background: #fff; }
 
-.nav .brand span {
+.nav .brandname span {
+  color: #000; }
+
+.nav .brandname.contrast span {
   color: #fff; }
 
 .nav .overlay {
@@ -1455,7 +1471,10 @@ html {
   .nav.grapefruit .menu-toggle.active span::after {
     background: #fff; }
 
-.nav.grapefruit .brand span {
+.nav.grapefruit .brandname span {
+  color: #000; }
+
+.nav.grapefruit .brandname.contrast span {
   color: #fff; }
 
 .nav.grapefruit .overlay {
@@ -1506,7 +1525,10 @@ html {
   .nav.pear .menu-toggle.active span::after {
     background: #fff; }
 
-.nav.pear .brand span {
+.nav.pear .brandname span {
+  color: #000; }
+
+.nav.pear .brandname.contrast span {
   color: #fff; }
 
 .nav.pear .overlay {
@@ -1650,7 +1672,10 @@ html {
     .brand .brandname span {
       display: block;
       font-size: 1.5rem;
-      font-weight: 700; }
+      font-weight: 700;
+      -webkit-transition: color 0.3s;
+      -o-transition: color 0.3s;
+      transition: color 0.3s; }
 
 .overlay {
   position: fixed;
@@ -1665,7 +1690,8 @@ html {
   -o-transition: opacity 0.5s;
   transition: opacity 0.5s; }
   .overlay.show {
-    opacity: 1; }
+    opacity: 1;
+    z-index: 99; }
   .overlay nav {
     height: inherit; }
     @media (max-width: 768px) {
@@ -2283,54 +2309,56 @@ a {
     color: #1e88e5; }
 
 .login-form-container {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%); }
-  @media (max-width: 767px) {
+  @media (max-height: 630px) {
     .login-form-container {
-      position: relative;
+      top: 0;
+      -webkit-transform: translate(-50%, 0%);
+      -ms-transform: translate(-50%, 0%);
+      transform: translate(-50%, 0%); } }
+  @media (max-width: 450px) and (orientation: portrait) {
+    .login-form-container {
+      position: fixed;
       width: 100%;
       top: 0;
+      right: 0;
+      bottom: 0;
       left: 0;
       -webkit-transform: none;
       -ms-transform: none;
       transform: none; } }
+  @media (max-width: 767px) and (orientation: landscape) {
+    .login-form-container {
+      top: 0;
+      -webkit-transform: translate(-50%, 0%);
+      -ms-transform: translate(-50%, 0%);
+      transform: translate(-50%, 0%); } }
 
 .login-form {
   position: relative;
-  width: 450px;
-  height: 685px;
-  padding: 35px 55px;
+  width: 380px;
+  height: 630px;
+  padding: 35px;
   -webkit-box-shadow: 0px 4px 16px -12px rgba(0, 0, 0, 0.5);
-  box-shadow: 0px 4px 16px -12px rgba(0, 0, 0, 0.5); }
-  .login-form.hide {
-    display: none; }
-  @media (max-width: 767px) and (orientation: portrait) {
+  box-shadow: 0px 4px 16px -12px rgba(0, 0, 0, 0.5);
+  z-index: 1; }
+  @media (max-width: 350px) and (orientation: portrait) {
     .login-form {
-      position: relative;
       width: 100%;
-      padding: 25px 35px;
-      top: 0;
-      left: 0;
-      -webkit-transform: none;
-      -ms-transform: none;
-      transform: none;
+      height: 100vh;
+      padding: 15px 25px;
       -webkit-box-shadow: none;
       box-shadow: none; } }
-  @media (max-width: 767px) and (orientation: landscape) {
+  @media (min-width: 351px) and (max-width: 450px) and (orientation: portrait) {
     .login-form {
-      position: relative;
-      width: 450px;
+      width: 100%;
+      height: 100vh;
       padding: 25px 35px;
-      margin: 0 auto;
-      top: 0;
-      left: 0;
-      -webkit-transform: none;
-      -ms-transform: none;
-      transform: none;
       -webkit-box-shadow: none;
       box-shadow: none; } }
 
@@ -2351,7 +2379,8 @@ a {
   -webkit-transition: all 0.1s ease-in;
   -o-transition: all 0.1s ease-in;
   transition: all 0.1s ease-in;
-  cursor: pointer; }
+  cursor: pointer;
+  z-index: 3; }
   .login-toggle.active {
     -webkit-transform: translateX(-50%) rotate(0deg);
     -ms-transform: translateX(-50%) rotate(0deg);
@@ -2367,22 +2396,43 @@ a {
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     color: #fff; }
-  @media (max-width: 767px) {
+  @media (max-height: 630px) {
     .login-toggle {
-      display: none;
-      -webkit-box-shadow: none;
-      box-shadow: none; } }
+      display: none; } }
+  @media (max-width: 350px) and (orientation: portrait) {
+    .login-toggle {
+      top: 15px;
+      left: 15px;
+      -webkit-transform: translate(0, 0) rotate(180deg);
+      -ms-transform: translate(0, 0) rotate(180deg);
+      transform: translate(0, 0) rotate(180deg); }
+      .login-toggle.active {
+        -webkit-transform: translate(0, 0) rotate(0deg);
+        -ms-transform: translate(0, 0) rotate(0deg);
+        transform: translate(0, 0) rotate(0deg); } }
+  @media (min-width: 351px) and (max-width: 375px) and (orientation: portrait) {
+    .login-toggle {
+      top: calc(100% - 60px); } }
+  @media (min-width: 376px) and (max-width: 450px) and (orientation: portrait) {
+    .login-toggle {
+      top: calc(100% - 80px); } }
+  @media (max-width: 767px) and (orientation: landscape) {
+    .login-toggle {
+      display: none; } }
 
 .social-group {
   position: absolute;
-  -webkit-transform: translateY(0%);
-  -ms-transform: translateY(0%);
-  transform: translateY(0%);
+  margin-left: auto;
+  margin-right: auto;
   -webkit-transition: all 0.3s ease-out;
   -o-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
+  top: auto;
+  left: auto;
+  opacity: 0;
   z-index: 2; }
   .social-group.slide-up {
+    opacity: 1;
     -webkit-transform: translateY(-100%);
     -ms-transform: translateY(-100%);
     transform: translateY(-100%);
@@ -2393,15 +2443,71 @@ a {
     border: none; }
     .social-group a.google {
       background: #dd4b39; }
+      .social-group a.google:hover {
+        background: #cf3624; }
     .social-group a.facebook {
       background: #3B5998; }
+      .social-group a.facebook:hover {
+        background: #314a7e; }
     .social-group a.twitter {
       background: #00aced; }
-  @media (max-width: 767px) {
+      .social-group a.twitter:hover {
+        background: #0092c9; }
+  @media (max-height: 630px) {
     .social-group {
-      display: block !important;
       position: relative;
-      -webkit-transform: none;
-      -ms-transform: none;
-      transform: none;
-      border-top: 1px solid #f5f5f5; } }
+      opacity: 1;
+      margin-top: 30px; } }
+  @media (max-width: 767px) and (orientation: landscape) {
+    .social-group {
+      position: relative;
+      opacity: 1;
+      margin-top: 30px; } }
+  @media (width: 375px) and (height: 812px) and (orientation: portrait) {
+    .social-group {
+      opacity: 1;
+      -webkit-perspective: 1000px;
+      perspective: 1000px;
+      -webkit-transform: rotateX(80deg);
+      transform: rotateX(80deg); } }
+
+.login-form .logo-frame {
+  margin-top: 15px;
+  margin-bottom: 30px; }
+
+.login-form h3 {
+  margin-bottom: 30px; }
+
+.login-form form {
+  margin-bottom: 30px; }
+  .login-form form .form-group, .login-form form .form-field {
+    margin-bottom: 15px; }
+    .login-form form .form-group:last-of-type, .login-form form .form-field:last-of-type {
+      margin-bottom: 30px; }
+  .login-form form .btn {
+    width: 100%; }
+
+.login-form .divider {
+  margin-bottom: 15px; }
+
+.social-group h3 {
+  position: absolute;
+  width: 80%;
+  top: 20%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); }
+
+.social-group .social-btns {
+  position: absolute;
+  width: 70%;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); }
+  .social-group .social-btns a {
+    display: block;
+    margin: 0 auto 15px auto;
+    padding: 15px 25px; }
