Add Carousel Feature

--- a/scss/module_login/gridbox-login.scss
+++ b/scss/module_login/gridbox-login.scss
@@ -216,7 +216,7 @@ $height: 630px;
     }
 
     .divider {
-        margin-bottom: 15px;
+        margin: 15px auto;
     }
 }
 
@@ -238,7 +238,7 @@ $height: 630px;
 
         a {
             display: block;
-            margin: 0 auto 15px auto;
+            margin: 0 auto;
             padding: 15px 25px;
         }
     }
