--- a/scss/gridbox.scss
+++ b/scss/gridbox.scss
@@ -33,6 +33,8 @@ html {
 @import './module_nav/gridbox-nav';
 @import './module_form/gridbox-form';
 @import './module_login/gridbox-login';
+@import './module_showcase/gridbox-showcase';
+@import './module_carousel/gridbox-carousel';
 
 
 
