--- a/scss/module_nav/gridbox-nav-menu-overlay.scss
+++ b/scss/module_nav/gridbox-nav-menu-overlay.scss
@@ -9,6 +9,7 @@
     overflow-x: hidden;
     overflow-y: auto;
     transition: opacity 0.5s;
+    z-index: -1;
 
     &.show {
         opacity: 1;
